# stm32_template

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c  stm32_basic.ld  stm32f103c8.ld
inc/: gmg12864.h  spi.h  utils.h
libs/freertos/: CMakeLists.txt  FreeRTOSConfig.h  cmake_install.cmake
libs/test/: Makefile  src.c  src.h
src/: gmg12864.c  spi.c  utils.c
stm32/startup/: startup_stm32f10x_cl.c  startup_stm32f10x_md.c
